--- a/manuscript/revision_letter.tex
+++ b/manuscript/revision_letter.tex
@@ -361,14 +361,55 @@ Conveniently, the `output problem' is less of an issue for QPMCMC, as only a sin
 
 The author proposes a quantum parallel MCMC algorithm that uses a Gumbel-max trick to quantum parallelize a multiple-proposal MCMC algorithm. The resulting algorithm drastically reduces the number evaluations of the target density. The manuscript is quite well written and motivated.
 
+\begin{reply}
+	I thank the AE for their generally positive reception!
+\end{reply}
+
 
 The referees are relatively positive about the work, however, certain improvements are deemed necessary and the points raised by them are important. I highlight a few points here, and have some additional comments.
 
 
 The first referee highlights that more specific details about the quantum algorithm are required. The second referee asks an important question regarding the cost of the I/O communication. I would further add that in the displayed Algorithms, it would be useful to indicate which components are CPU parallelized, GPU parallelized, and quantum parallelized.
 
+\begin{reply}
+I completely agree with the Reviewers' points and have added the following paragraph describing the burden associated with loading classical data onto a quantum machine:
+\begin{quote}
+There are major technical barriers to the practical implementation of QPMCMC.  The framework, like other quantum machine learning (QML) schemes, requires on-loading and off-loading classical data to and from a quantum machine.  In the seminal review of QML, \citet{biamonte2017quantum} discuss what they call the `input problem'.  \citet{cortese2018loading} present a general purpose quantum circuit for loading $B$ classical bits into a quantum data structure comprising $\log_2 (B)$ qubits with circuit depth $\order{\log (B)}$.  For continuous targets, QPMCMC requires reading $\order{P}$ real vectors $\ttheta_p\in \mathbb{R}^D$ onto the quantum machine at each MCMC iteration.  If $b$ is the number of bits used to represent a single real value, then reading $B=\order{PDb}$ classical bits into the quantum machine requires time $\order{\log (PDb)}$.  This is true whether one opts for fixed-point \citep{jordan2005fast} or floating-point \citep{haener2018quantum} representations for real values.  The outlook can be better for discrete distributions.  For example, the QPMCMC scheme presented in Section \ref{sec:disc} only requires loading the entire configuration state once prior to sampling.  A $D$-spin Ising model requires $D$ classical bits to encode, and these bits load onto a quantum machine in time $\order{\log(D)}$.  Once one has encoded the entire system state, each QPMCMC iteration only requires loading the addresses of the $\order{P}$ proposal states. If one uses $b$ bits to encode each address, then the total time required to load data onto the quantum machine is $\order{\log(Pb)}$ for each QPMCMC iteration.  On the other hand, the speedup for discrete targets assumes the ability to hold an entire configuration in QRAM.
+Conveniently, the `output problem' is less of an issue for QPMCMC, as only a single integer $\hat{p} \in \{0,\dots,P\}$ need be extracted within Algorithm \ref{alg:min}.
+\end{quote}
+I have also expanded the third paragraph of Section \ref{sec:intro} to help clarify the nature of parallelization within the proposed framework:
+\begin{quote}
+	One need not use parallel computing to implement Algorithm \ref{alg:pMCMC}, but the real promise and power of parallel MCMC comes from its natural parallelizability \citep{calderhead2014general}. 
+	Contemporary hardware design emphasizes architectures that enable execution of multiple mathematical operations simultaneously. Parallel MCMC techniques stand to leverage technological developments that keep modern computation on track with Moore's Law, which predicts that processing power doubles every two years.  For example, the algorithm of \citet{tjelmeland2004using} generates $P$ conditionally independent proposals and then evaluates the probabilities of \eqref{eq:probs}.  One may parallelize the proposal generation step using parallel pseudorandom number generators (PRNG) such as those advanced in \citet{salmon2011parallel}. The computational complexity of the target evaluations $\pi(\ttheta_p)$ is linear in the number of proposals. This presents a significant burden when $\pi(\cdot)$ is computationally expensive, e.g., in big data settings or for Bayesian inversion, but evaluation of the target density over the $P$ proposals is again a naturally parallelizable task.  Moreover, widely available machine learning software such as \textsc{TensorFlow} allows users to easily parallelize both random number generation and target evaluations on general purpose graphics processing units (GPU) \citep{lao2020tfp}. Finally, when generating independent proposals using a proposal distribution of the form $q(\ttheta_0,\Ttheta_{-0})=\prod_{p=1}^Pq(\ttheta_0,\ttheta_{p})$, the acceptance probabilities \eqref{eq:probs} require the $\order{P^2}$ evaluation of the $P+1\choose 2$ terms $q(\ttheta_{p},\ttheta_{p'})$, but \citet{massive,holbrook2021scalable} demonstrate the natural parallelizability of such pairwise operations, obtaining orders-of-magnitude speedups with contemporary GPUs.  The proposed method directly addresses the acceptance step of Algorithm \ref{alg:pMCMC}, while leaving the choice of parallelizing (or not parallelizing) the proposal step to the practitioner.  
+\end{quote}
+\end{reply}
+
 
 The author has motivated the need for quantum algorithms for big-data problems where evaluation of the target is expensive. However, only data-less examples have been implemented. Implementation on a real example is warranted. Further, comparisons with other quantum methods (as suggested by referee) would be useful to understand the effectiveness of the proposed methodology. Finally, comparison with the non-quantum version of the multiple-proposal would be helpful to make the point that the mixing of the algorithm remains unaffected.
+ \begin{figure}[!t]
+	\centering
+	\includegraphics[width=0.9\linewidth]{figures/blackHole.png}
+	\caption{On the left is a 4,076-by-4,076 intensity map of the shadow of supermassive black hole Sagittarius A*  \citep{akiyama2022first}.  On the right is the pixelwise posterior mode of a Bayesian image classification model fit to intensity data.  Within a Metropolis-in-Gibbs routine, quantum parallel MCMC using 1,024 proposals requires less that one-tenth the posterior evaluations required by conventional parallel MCMC.}\label{fig:blackHole}
+\end{figure}
+
+\begin{reply}
+	I thank the AE for these helpful suggestions. In response, I have added Section \ref{sec:bayesIm}, in which I apply a Bayesian image classification model to a recently released 4000$\times$4000 image of the supermassive black hole Sag A*.  For this target, QPMCMC scores a 10-fold speedup over parallel MCMC:
+	\begin{quote}
+		We apply a Bayesian image classification model to an intensity map (Figure \ref{fig:blackHole}) of the newly imaged supermassive black hole, Sagittarius A*, located at the Galactic Center of the Milky Way \citep{akiyama2022first}.  Whereas one cannot see the black hole itself, one may see the shadow of the black hole cast by the hot, swirling cloud of gas surrounding it.  We extract the black hole from the surrounding cloud by modeling the intensity at each of the $D=$4,076$^2=$16,613,776 pixels as belonging to a mixture of two truncated normals with values $y_{d}$ restricted to the intensity range $[0,255]$.  Namely, we follow \citet{hurn1997difficulties} and specify the latent variable model
+		\begin{align*}
+			y_d |(\mu_\ell, \sigma^2, \theta_d) &\stackrel{ind}{\sim} \mbox{Normal}(\mu_\ell,\sigma^2 ) \, ,\quad y_d \in [0,255] \, , \quad \theta_d=\ell \,,\quad d\in \{1,\dots,D\}\, ,\\
+			\mu_\ell &\stackrel{iid}{\sim} \mbox{Uniform} (0,255) \,  , \quad \ell \in \{-1,1\} \, , \\
+			\frac{1}{\sigma^2} &\sim  \mbox{Gamma}\left(\frac{1}{2}, \frac{1}{2} \right)  \, ,
+		\end{align*}
+		where $\ttheta=(\theta_1,\dots,\theta_D)$ share for a prior the Ising model \eqref{eq:ising} with edges joining neighboring pixels and interaction $\rho=1.2$. 
+		
+		We use a QPMCMC-within-Gibbs scheme to infer the join posterior of $\ttheta$ and the three mixture model parameters.  For the former, we use the same QPMCMC scheme as in Section \ref{sec:ising} with 1,024 proposals at each iteration. For the latter, we use the closed-form updates presented in \citet{hurn1997difficulties}.  We run this scheme for 20 million iterations, discarding the first 10 million as burnin.  We thin the remaining sample at a ratio of 1 to 40,000 for the latent memberships $\ttheta$ and 1 to 4,000 for the three parameters $\mu_{-1}$, $\mu_1$ and $\sigma^2$.  Using the \textsc{R} package \textsc{coda} \citep{coda}, we calculate effective sample sizes of the log-posterior (257.1), $\mu_{-1}$ (1,578.7), $\mu_1$ (257.6) and $\sigma^2$ (2,500.0), suggesting adequate convergence.   Figure \ref{fig:blackHole} shows both the intensity data and the pixelwise posterior mode of the latent membership vector $\ttheta$.  The QPMCMC requires only 1,977,553,608 target evaluations compared to the 1,024 $\times$ 20,000,000 $=$ 2.048$\times10^{10}$ evaluations required for the analogous parallel MCMC scheme implemented on a conventional computer, representing a 10.36-fold speedup.
+	\end{quote}
+	I have also added the following paragraph to Section \ref{sec:disc} comparing QPMCMC with other quantum methodologies:
+	\begin{quote}
+Second, can QPMCMC be combined with established quantum algorithms that make use of `quantum walks' on graphs to sample from discrete target distributions?  \citet{szegedy2004quantum} presents a quantum analog to classical ergodic reversible Markov chains and shows that such quantum walks sometimes provide quadratic speedups over classical Markov chains.  \citet{szegedy2004quantum} also points out that Grover's search, a key component within QPMCMC, may be interpreted as performing just such a quantum walk on a complete graph.  \citet{wocjan2008speedup} accelerate the quantum walk by using ancillary Markov chains to improve mixing and apply their method to simulated annealing.  Given a quantum algorithm $\mathbb{A}$ for producing a discrete random sample with variance $\sigma^2$, \citet{montanaro} develops a quantum algorithm for estimating the mean of algorithm $\mathbb{A}$'s output with error $\epsilon$ by running algorithm $\mathbb{A}$ a mere $\widetilde{\mathcal{O}}(\sigma/\epsilon)$ times, where $\widetilde{\mathcal{O}}$ hides polylogarithmic terms. Importantly, this quadratic quantum speedup over classical Monte Carlo applies for quantum algorithms $\mathbb{A}$ that only feature a single measurement such as certain simple quantum walk algorithms. Unfortunately, this assumption fails for quantizations of Metropolis-Hastings, in general, and QPMCMC, in particular. More promising for QPMCMC, \citet{lemieux2020efficient} develop a quantum circuit that applies Metropolis-Hastings to the Ising model without the need for oracle calls.  An interesting question is whether similar non-oracular quantum circuits exist for the basic parallel MCMC backbone to QPMCMC.  In general, however, comparison between QPMCMC and other quantum Monte Carlo techniques is challenging because the foregoing literature (\textcolor{red}{a}) largely focuses on MCMC as a tool for discrete optimization, with algorithms that only ever return a single Monte Carlo sample or function thereof, and (\textcolor{red}{b}) restricts itself to a handfull of simple, stylized and discrete target distributions.  On the other hand, QPMCMC is a general inferential framework for sampling from general discrete and continuous distributions alike.
+	\end{quote}
+\end{reply}
 
 \subsection*{Additional Comments}
 
