--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -714,7 +714,7 @@ Large-scale, practical quantum computing is still a long way off, but quantum al
 
 \section*{Acknowledgments}
 
-This work was supported by NIH grant K25 AI153816 and NSF grant DMS 2152774.
+This work was supported by grants NIH K25 AI153816, NSF DMS 2152774 and NSF DMS 2236854.
 
 \appendix
 
