--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -828,6 +828,20 @@ Recalling that $\lambda_{p'}=\log \pi_{p'}$, we exponentiate the logarithms, and
 \end{align*}
 where the final equality follows easily from a change of variables. 
 
+\section{Mixing of parallel MCMC and QPMCMC}\label{sec:mixing}
+
+ \begin{figure}[!t]
+	\centering
+	\includegraphics[width=0.7\linewidth]{pMCMCvsQPMCMC.pdf}
+	\caption{Relative differences between effective sample sizes (ESS) for parallel MCMC (pMCMC) and quantum parallel MCMC (QPMCMC) across a range of proposal counts. We target a 10-dimensional standard normal distribution.  For each algorithm and each proposal setting, we generate 100 independent chains of length 10,000 and calculate the mean and minimum ESS across dimensions.}\label{fig:mixing} 
+\end{figure}
+
+To ascertain whether QPMCMC mixes differently compared to conventional parallel MCMC, we run both algorithms for a range of proposal counts to sample from a 10-dimensional standard normal distribution. For each algorithm and proposal setting, we run 100 independent chains for 10,000 iterations and obtain effective sample sizes ESS$_d$ for $d \in \{1,\dots,10\}$.   We then calculate the relative differences between the means and minima of one chain generated using parallel MCMC and one chain generated using QPMCMC; for example:
+\begin{align*}
+	\mbox{Relative difference between means} \: \overline{\mbox{ESS}}_{(\cdot)} = \frac{\left|\overline{\mbox{ESS}}_{pMCMC} - \overline{\mbox{ESS}}_{QPMCMC}\right| }{\overline{\mbox{ESS}}_{pMCMC} }
+\end{align*}
+Figure \ref{fig:mixing} shows results.  In general, the majority relative differences are small.  For both statistics, mean relative differences are less than 0.5, regardless of proposal count.  Again for both statistics, more than 75\% of the independent runs result in relative differences below 0.1.  We note that relative differences between means (blue) appear to decrease with the number of proposals, but the same does not hold for relative differences between minima (red).
+
 \section{Note on simulations}
 
 We use \textsc{R} \citep{rlang}, \textsc{Python} \citep{vanrossum1995python}, \textsc{TensorFlow} \citep{abadi2016tensorflow} and  \textsc{TensorFlow Probability MCMC} \citep{lao2020tfp} in our simulations and the \textsc{ggplot2} package to generate all figures \citep{ggplot}.   In \textsc{R}, we use the package \textsc{coda} \citep{coda} to calculate effective sample sizes.  In \textsc{Python}, we use a built in function from \textsc{TensorFlow Probability MCMC}.  The primary color palette comes from \citet{wes}.
