--- a/manuscript/refs.bib
+++ b/manuscript/refs.bib
@@ -97,6 +97,16 @@
 	publisher={Springer}
 }
 
+@article{gelman1992single,
+	title={A single series from the Gibbs sampler provides a false sense of security},
+	author={Gelman, Andrew and Rubin, Donald B},
+	journal={Bayesian statistics},
+	volume={4},
+	number={1},
+	pages={625--631},
+	year={1992}
+}
+
 @Manual{wes,    title = {wesanderson: A Wes Anderson Palette Generator},    author = {Karthik Ram and Hadley Wickham},    year = {2018},    note = {R package version 0.3.6},    url = {https://CRAN.R-project.org/package=wesanderson},  }
 
 @article{akiyama2022first,
