just submitted revision

--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -596,7 +596,7 @@ When $\pi(\cdot)$ and $q(\cdot)$ take continuous values on a topologically compa
  	\vspace{3em}
 	\centering
 	\includegraphics[width=0.9\linewidth]{mcmcIterations.pdf}
-	\caption{Total number of oracle evaluations required for each of 2,000 parallel MCMC iterations. In total, the combined MCMC runs required roughly $7$\% of the usual 20 million target evaluations. Over  99.4\% of the 10,000 MCMC iterations successfully sampled from the discrete distribution with probabilities of \eqref{eq:probs}. Burn-in iterations require moderately more evaluations because the current state occupies a lower density region and represents a `less good' warm-start.}\label{fig:mcmcIterations}
+	\caption{Total number of oracle evaluations required for each of 2,000 quantum parallel MCMC (QPMCMC) iterations for standard multivariate normal targets of five different dimensionalities. Regardless of target dimension, the individual QPMCMC runs require roughly $7$\% of the usual 4 million target evaluations. Over  99.4\% of the 10,000 MCMC iterations across all dimensions successfully sample from the discrete distribution with probabilities of \eqref{eq:probs}. Burn-in iterations require moderately more evaluations because the current state occupies a lower density region and represents a `less good' warm-start.}\label{fig:mcmcIterations}
 \end{figure}
 
 
@@ -617,7 +617,7 @@ which combines the numerators of \eqref{eq:probs}, the Gumbel-max trick and a tr
 
 
 
-In general MCMC, one often calibrates the scaling of a proposal kernel to balance between exploring the target's domain and remaining within high-density regions.  Optimal scaling strategies may lead to a large number of rejected proposals \citep{roberts2001optimal}.  Indeed, \citet{holbrook2021generating} shows that parallel MCMC algorithms are no exception. When using the Gumbel-max trick to sample from proposals, this means that the current state is often quite near optimality, representing a warm-start.  Figure \ref{fig:mcmcIterations} shows how this warm-starting effects the number of oracle calls (and hence target evaluations) within the quantum minimization sub-routine over the course of an MCMC trajectory.  We target multi-dimensional standard normal distributions of differing dimensions using the vector $(100,\dots,100)$ as starting position. We fix the number of Gaussian proposals to be 2,000 and use standard adaptation procedures to target a 50\% acceptance rate while guaranteeing convergence \citep{rosenthal2011optimal}. Across iterations, QPMCMC requires relatively few oracle calls compared to the 2,000 target evaluations of parallel MCMC. We also witness the expected drop in the number of oracle evaluations as the chain approaches the target's high-density region. Remarkably, the algorithm succeeds in sampling from the true discrete distribution in 99.5\% of the MCMC iterations. An independent simulation obtains similar results, requiring roughly 7\% of the usual number of target evaluations. Figure \ref{fig:qq} shows a quantile-quantile plot for all 100 dimensions of a multi-dimensional standard normal distribution. We see no appreciable impact from the rare failure of the quantum minimization sub-routine.
+In general MCMC, one often calibrates the scaling of a proposal kernel to balance between exploring the target's domain and remaining within high-density regions.  Optimal scaling strategies may lead to a large number of rejected proposals \citep{roberts2001optimal}.  Indeed, \citet{holbrook2021generating} shows that parallel MCMC algorithms are no exception. When using the Gumbel-max trick to sample from proposals, this means that the current state is often quite near optimality, representing a warm-start.  Figure \ref{fig:mcmcIterations} shows how this warm-starting effects the number of oracle calls (and hence target evaluations) within the quantum minimization sub-routine over the course of an MCMC trajectory.  We target multi-dimensional standard normal distributions of differing dimensions using the vector $(100,\dots,100)$ as starting position. We fix the number of Gaussian proposals to be 2,000 and use standard adaptation procedures \citep{rosenthal2011optimal} to target a 50\% acceptance rate while guaranteeing convergence. Although no theoretical results validate this target acceptance rate, the rate is close to empirically optimal rates from \citet{holbrook2021generating}. Across iterations, QPMCMC requires relatively few oracle calls compared to the 2,000 target evaluations of parallel MCMC. We also witness the expected drop in the number of oracle evaluations as the chain approaches the target's high-density region. Remarkably, the algorithm succeeds in sampling from the true discrete distribution in 99.5\% of the MCMC iterations. An independent simulation obtains similar results, requiring roughly 7\% of the usual number of target evaluations. Figure \ref{fig:qq} shows a quantile-quantile plot for all 100 dimensions of a multi-dimensional standard normal distribution. We see no appreciable impact from the rare failure of the quantum minimization sub-routine.
 
 %\begin{table}[ht]\centering
 %	\begin{tabular}{llll}  \toprule 
@@ -650,7 +650,7 @@ Finally, we compare convergence speed for QPMCMC using 1,000, 5,000 and 10,000 p
 			10,000 & 5,998  (4,998,  6,998) & 1,993,484  (1,662,592,  2,330,842) & 30  (29.96, 30.26) & 12.87  (8.64, 18.80) \\    \bottomrule
 		\end{tabular}
 	}
-	\caption{Racing to 100 effective samples for a target with 1,000 disjoint modes. `Speedup' is ratio between target evaluations required for sequential and quantum implementations. `Efficiency gain' is ratio between target evaluations required for 1,000 proposal and 5,000/10,000 proposal implementations. We report means (minima, maxima) across 5 independent runs.}\label{tab:res}
+	\caption{Racing to a minimum (between the two dimensions) of 100 effective samples for a target with 1,000 disjoint modes. `Speedup' is ratio between target evaluations required for sequential and quantum implementations. `Efficiency gain' is ratio between target evaluations required for 1,000 proposal and 5,000/10,000 proposal implementations. We report means (minima, maxima) across 5 independent runs.}\label{tab:res}
 \end{table}
 
 
@@ -846,9 +846,9 @@ To ascertain whether QPMCMC mixes differently compared to conventional parallel 
 \end{align*}
 Figure \ref{fig:mixing} shows results.  In general, the majority relative differences are small.  For both statistics, mean relative differences are less than 0.05, regardless of proposal count.  Again for both statistics, more than 75\% of the independent runs result in relative differences below 0.1.  We note that relative differences between means (blue) appear to decrease with the number of proposals, but the same does not hold for relative differences between minima (red).
 
-\section{Note on simulations}
+\section{Note on simulations}\label{sec:sim}
 
-We use \textsc{R} \citep{rlang}, \textsc{Python} \citep{vanrossum1995python}, \textsc{TensorFlow} \citep{abadi2016tensorflow} and  \textsc{TensorFlow Probability MCMC} \citep{lao2020tfp} in our simulations and the \textsc{ggplot2} package to generate all figures \citep{ggplot}.   In \textsc{R}, we use the package \textsc{coda} \citep{coda} to calculate effective sample sizes.  In \textsc{Python}, we use a built in function from \textsc{TensorFlow Probability MCMC}.  The primary color palette comes from \citet{wes}.
+We use \textsc{R} \citep{rlang}, \textsc{Python} \citep{vanrossum1995python}, \textsc{TensorFlow} \citep{abadi2016tensorflow} and  \textsc{TensorFlow Probability MCMC} \citep{lao2020tfp} in our simulations and the \textsc{ggplot2} package to generate all figures \citep{ggplot}.   In \textsc{R}, we use the package \textsc{coda} \citep{coda} to calculate effective sample sizes.  In \textsc{Python}, we use a built-in function from \textsc{TensorFlow Probability MCMC}.  The primary color palette comes from \citet{wes}.
 
 All simulations rely on the fact that the Grover iterations of \eqref{eq:grov} manipulate the probability amplitudes in a deterministic manner. For example, the following \textsc{R} code specifies $N$ uniform probability amplitudes (\verb|sqrtProbs|), performs $I$ Grover iterations and measures a single state according to the resulting probabilities.
 \begin{minted}{R}
